Side scrollbars fixed

--- a/src/styles/abstracts/_layout.scss
+++ b/src/styles/abstracts/_layout.scss
@@ -11,7 +11,7 @@ $layout: (
    ),
    tablet: (
       center-left-tablet: left,
-      ct-padding-offset: 7rem 0,
+      ct-padding-offset: 10rem 0,
    ),
    desktop: (
       center-left-dekstop: left,
